Replace Compose tool window with MyBatis helper features
Removed the Compose-based MyToolWindow and related dependencies. Added MybatisSqlMarkProvider for XML-to-Java navigation and PluginSettingState/PluginSettingsConfigurable for configurable tool class support. Updated plugin.xml to register new features and removed Compose dependencies from build configuration.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,24 +13,26 @@
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/best-practices-for-listing.html#plugin-description -->
     <description><![CDATA[
-        个人使用插件
-        功能：
-        1. 根据Mybatis文件的sqlId找到Java代码的使用处
+       MyBatis 辅助插件。<br>
+      功能：<br>
+      1. XML 跳转 Java 代码。<br>
+      2. 支持自定义工具类搜索。
     ]]></description>
 
     <!-- Product and plugin compatibility requirements.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
-    <depends>com.intellij.modules.compose</depends>
-
     <depends>com.intellij.java</depends>
     <depends>com.intellij.modules.xml</depends>
-    <depends>com.intellij.properties</depends>
     <depends>com.intellij.database</depends>
     <resource-bundle>messages.MyMessageBundle</resource-bundle>
     <!-- Extensions defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow id="MyToolWindow" factoryClass="org.gcb.blah.MyToolWindowFactory"
-                    icon="AllIcons.Toolwindows.ToolWindowPalette"/>
+        <projectConfigurable
+                parentId="tools"
+                instance="org.gcb.blah.PluginSettingsConfigurable"
+                id="org.gcb.blah.PluginSettingsConfigurable"
+                displayName="MyBatis Helper"/>
+        <codeInsight.lineMarkerProvider language="XML" implementationClass="org.gcb.blah.MybatisSqlMarkProvider"/>
     </extensions>
 </idea-plugin>
