1. refactor mybatis helper 2. dev line counter

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,14 +30,14 @@
     <extensions defaultExtensionNs="com.intellij">
         <projectConfigurable
                 parentId="tools"
-                instance="org.gcb.blah.PluginSettingsConfigurable"
-                id="org.gcb.blah.PluginSettingsConfigurable"
+                instance="org.gcb.blah.mybatis.PluginSettingsConfigurable"
+                id="org.gcb.blah.mybatis.PluginSettingsConfigurable"
                 displayName="MyBatis Helper"/>
-        <codeInsight.lineMarkerProvider language="XML" implementationClass="org.gcb.blah.MybatisSqlMarkProvider"/>
+        <codeInsight.lineMarkerProvider language="XML" implementationClass="org.gcb.blah.mybatis.MybatisSqlMarkProvider"/>
     </extensions>
     <actions>
-        <action id="org.gcb.blah.RefreshMybatisMarkerAction"
-                class="org.gcb.blah.RefreshMybatisMarkerAction"
+        <action id="org.gcb.blah.mybatis.RefreshMybatisMarkerAction"
+                class="org.gcb.blah.mybatis.RefreshMybatisMarkerAction"
                 text="Refresh MyBatis Markers"
                 description="Manually triggers a re-scan of MyBatis mappers">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
